Fixed the overflow

--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,8 @@ body {
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(10deg);
-    position: relative; }
+    position: relative;
+    overflow: hidden; }
     @media (max-width: 37.5em) {
       .story__shape {
         transform: translateX(-3rem) skewX(0); } }
