--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -31,7 +31,7 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(10deg);
     position: relative;
-
+    overflow: hidden;
     @include respond(phone) {
       transform: translateX(-3rem) skewX(0);
     }
